--- a/gb/22/9/8/n13820368.md
+++ b/gb/22/9/8/n13820368.md
@@ -1,18 +1,18 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【未解之谜】老鼠乌托邦</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/09/id13820429-1200x800-2-600x400.jpg" />
 <h6>“25号宇宙”实验推演人类未来，准得令人心惊；成、住、坏、灭四大阶段，人类现在在哪里？（《未解之谜》提供）
 </h6>
 <hr>
-<p>大家好，我是扶摇。欢迎和我一起探索<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%9C%AA%E8%A7%A3%E4%B9%8B%E8%B0%9C.md#1">未解之谜</a>。</p>
-<p>今天给大家介绍一个60年代的神奇实验。神奇在哪里呢？因为实验对象虽然只是一群老鼠，实验结果却准确<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%A2%84%E8%A8%80.md#1">预言</a>了之后几十年人类的现状。</p>
-<h2><ahref="https://github.com/19920513/djy/blob/master/gb/tag/25%E5%8F%B7%E5%AE%87%E5%AE%99.md#1">25号宇宙</a></h2>
-<p>这就是美国行为学家约翰?卡尔宏博士（John Bumpass Calhoun）在上个世纪60年代开始进行的老鼠宇宙系列实验。其中最为著名的是他在1973年发表的论文“死亡平方”（Death Squared：The Explosive Growth and Demise of a Mouse Population）中记录的“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/25%E5%8F%B7%E5%AE%87%E5%AE%99.md#1">25号宇宙</a>”（Universe 25）实验。</p>
+<p>大家好，我是扶摇。欢迎和我一起探索未解之谜。</p>
+<p>今天给大家介绍一个60年代的神奇实验。神奇在哪里呢？因为实验对象虽然只是一群老鼠，实验结果却准确预言了之后几十年人类的现状。</p>
+<h2>25号宇宙</h2>
+<p>这就是美国行为学家约翰?卡尔宏博士（John Bumpass Calhoun）在上个世纪60年代开始进行的老鼠宇宙系列实验。其中最为著名的是他在1973年发表的论文“死亡平方”（Death Squared：The Explosive Growth and Demise of a Mouse Population）中记录的“25号宇宙”（Universe 25）实验。</p>
 <div class="video_fit_container"><a width="635" b="356" class="video_frame" src="https://www.ganjing.com/embed/Vr0bHIRhWRDSt" allowfullscreen></a>
 </div>
-<p>实验场所是农场内一个长宽各2.57米，高1.37米的金属盒子，总共可容纳3840只老鼠。以盒子中央为中心均匀划分出16个居住区域，每个区域都有独立饮水器，食物仓，以及16个休息窝，每个休息窝都可以让15只老鼠舒适地住在里面。这里通风良好，温度恒定，有吃不完的粮食，喝不完的水，没有天敌，也不会有传染病。而老鼠们唯一要做的事就是“Enjoy Life——尽情享受人生。这里简直就是老鼠的理想之国<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B9%8C%E6%89%98%E9%82%A6.md#1">乌托邦</a>。所以，人们也称卡尔宏的实验称为老鼠乌托邦实验。</p>
+<p>实验场所是农场内一个长宽各2.57米，高1.37米的金属盒子，总共可容纳3840只老鼠。以盒子中央为中心均匀划分出16个居住区域，每个区域都有独立饮水器，食物仓，以及16个休息窝，每个休息窝都可以让15只老鼠舒适地住在里面。这里通风良好，温度恒定，有吃不完的粮食，喝不完的水，没有天敌，也不会有传染病。而老鼠们唯一要做的事就是“Enjoy Life——尽情享受人生。这里简直就是老鼠的理想之国乌托邦。所以，人们也称卡尔宏的实验称为老鼠乌托邦实验。</p>
 <p>“25号宇宙”实验前后跨越5年，从1968年7月开始到1973年5月结束，共分为A，B，C，D四个阶段，刚好对佛家中所说每个宇宙都会经历的成、住、坏、灭四个阶段。</p>
 <h3>阶段A：奋斗期</h3>
 <p>4对出生刚48天的小老鼠住进来了。每只都健康活泼。新天新地新世界，快乐的老鼠们很快开始标记各自的领地，选巢穴，开始了殖民地生活。第104天，第二代顺利出生了。</p>
@@ -24,14 +24,14 @@
 <p>第560天后，老鼠数量达到顶峯，2200只，然后开始出现负增长。出生率和新生小鼠存活率急剧下降。第600天，最后一只存活下来的小鼠出生了。</p>
 <p>然后奇怪的现象出现了。那些退出的雄鼠们不再打架，也不再追求姑娘们。除了吃喝拉撒之外，它们只醉心于一件事情，就是梳理自己的皮毛。这时，虽然有的巢穴已经拥挤不堪，但有20%的巢穴却仍然是空的。而那些不再具备生育能力的雌鼠们会爬进这些空巢穴隐居起来。</p>
 <p>从此以后，因为不再有新的小鼠出生，25号宇宙开始进入缓慢的死亡期。新成长起来的小鼠们不再有攻击性，也没有学会其它社交行为，对异性兴趣缺乏，只知道关注自己，每天用大量的时间为自己梳理皮毛。卡尔宏称这些老鼠为“美丽鼠”。</p>
-<p>在卡尔宏撰写这篇论文的时候，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B9%8C%E6%89%98%E9%82%A6.md#1">乌托邦</a>中还剩下一百多只这样的“美丽鼠”。他预测最后一只老鼠会在1973年5月，实验开始的第1780天死亡。25号宇宙自此湮灭。</p>
+<p>在卡尔宏撰写这篇论文的时候，乌托邦中还剩下一百多只这样的“美丽鼠”。他预测最后一只老鼠会在1973年5月，实验开始的第1780天死亡。25号宇宙自此湮灭。</p>
 <p>60年代早期，卡尔宏就开始做这样的老鼠实验，结果都差不多。他的同事马斯登博士（Halsey Marsden）曾经试过拿几只“美丽鼠”出来，放到一个全新的盒子中，希望它们在新的环境中可以重拾信心，建立新宇宙。然而这些“美丽鼠”们对繁殖后代还是提不起兴趣，它们的行为模式永久性地发生了变化。</p>
 <p>这也让卡尔宏陷入了思考。因为之前他一直以为人口过密造成的压力才是老鼠们出现反常行为的原因。然而造成这些“美丽鼠”的原因显然不是这个。事实上25号宇宙老鼠数量最多的时候也远没达到3840只的上限。那么老鼠们不肯好好享福，非要把天堂弄成地狱的道理在哪里呢？</p>
 <p>卡尔宏最后分析认为，正是因为乌托邦中条件太好，老鼠们个个活得长寿，老一代占据着社区中有限的几个角色不肯退休，新一代为了获得一个社会角色不得不向长辈们开战。结果两败俱伤，导致社会崩溃。也就是说，主要原因是年轻的老鼠们在社会中找不到适合自己扮演的角色。第一代为此发展出了暴力，第二代干脆退出社会。</p>
 <p>然后他说，如果人类日后出现了类似的系列现象，最终的结局不可避免，那就是物种消失。</p>
 <p>此话一出，招来许多科学家的质疑。大家纷纷批评说，人类社会比老鼠可复杂高级得多，你怎么可以这么轻率地下结论呢？</p>
-<h2>卡尔宏的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%A2%84%E8%A8%80.md#1">预言</a></h2>
-<p>然而50年后回头再看，卡尔宏的实验还真的是神预言了<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BA%BA%E7%B1%BB%E7%9A%84%E6%9C%AA%E6%9D%A5.md#1">人类的未来</a>。</p>
+<h2>卡尔宏的预言</h2>
+<p>然而50年后回头再看，卡尔宏的实验还真的是神预言了人类的未来。</p>
 <p>几乎在卡尔宏开始创建老鼠宇宙的同时，也就是60年代初期，全球生育率攀升到了顶峯，平均每位女性生5个孩子。60年代后期生育率开始下降，而且从此再没回升过，相对于老鼠宇宙，就是走入了C阶段，平衡期。</p>
 <p>在这一阶段，老鼠们出现了暴力行为。而在六七十年代的人类社会，东西方的青年都不约而同地进入了躁动期，开始变得好斗。东方咱不说了，大家都知道。而在西方社会中，街头革命开始盛行，女权主义抬头，反社会、反传统的嬉皮士、朋克文化开始大行其道。</p>
 <p>然而进入80年代，新一代的年轻人不再好斗。这时，社交退缩的“美丽鼠”现象开始悄悄萌芽了。90年代初，日本的泡沫经济破灭后，“宅男”一族的出现让这一现象浮出了水面。</p>
@@ -40,72 +40,62 @@
 <p>此外，根据美国中央情报局（CIA）对2022世界生育率的预测，全球227个国家中，有将近60%的国家生育率会低于2.1这条世代更替的底线。发达国家几乎无一逃脱。而生育率高的国家大部分都是非洲小国。</p>
 <p>也就意味着，人类开始面临人口危机。不是人口过剩，恰恰相反，是人口萎缩，种族延续出现问题。如果不好好应对，就像卡尔宏预言的那样，我们将会面临物种消亡的危险。</p>
 <p>关于这一点，各国政府也都清楚，想方设法鼓励，可年轻人们就是不动心，仿佛对这个社会已经失去了信心。这难道也是跟老鼠乌托邦一样，是物质条件太好引起的吗？我们不知道。但是有一点，物质满足并不见得就能给人带来幸福。卡尔宏的实验已经证明了这一点。人类觉得给老鼠创造一个物质极大丰富的小世界就是给予它们最大的幸福。它们应该表示感谢然后安心享乐。老鼠们却用行动说：“NO”。</p>
-<p>那么化解危机的关键在哪里呢？卡尔宏在他的论文中不但预言了<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BA%BA%E7%B1%BB%E7%9A%84%E6%9C%AA%E6%9D%A5.md#1">人类的未来</a>，还推荐了解决方案，就是《圣经》中的生命树。《启示录》中说，流淌着生命之水的河流两岸长着生命树，“结十二样果子，每月都结果子”，“树上的叶子可以医治列国之民”。卡尔宏说，人类的进化就是在走一条通向生命树的路，把握住了生命树，路上就都会是平安。</p>
+<p>那么化解危机的关键在哪里呢？卡尔宏在他的论文中不但预言了人类的未来，还推荐了解决方案，就是《圣经》中的生命树。《启示录》中说，流淌着生命之水的河流两岸长着生命树，“结十二样果子，每月都结果子”，“树上的叶子可以医治列国之民”。卡尔宏说，人类的进化就是在走一条通向生命树的路，把握住了生命树，路上就都会是平安。</p>
 <p>虽然说得比较隐晦，但大致意思是清楚的，就是当危机出现的时候，依靠信仰可以闯过难关。虽然科学界并不认可这一说法，不过当年9月，卡尔宏倒是还受到了教宗保禄六世的接见，不知道是不是因为这份论文的原因。</p>
 <p>我们不知道卡尔宏的生命树代表着什么样的信仰，又如何可以帮人类走出困境。不过信仰可以给人类带来幸福这件事，倒是有个绝妙的好例子。</p>
 <h2>世界上最幸福的国家</h2>
 <p>在中国和印度之间、喜马拉雅山的南麓藏着一个小小的不丹王国，全民虔诚信佛。它是世界上最不发达的国家之一，却也是世界上“最快乐的国家”。这里如画的风景里见不到豪宅，也不会有贫民窟的棚屋。街上见不到乞丐和游民，只有穿着传统服装的乡民们笑嘻嘻地走过。你要问他们为什么这么开心，他们会说：“我很满足。”</p>
 <p>1972年，不丹第四任国王旺楚克把他们这种幸福的理念推广给了全世界，提出了“国民幸福总值”（Gross National Happiness）的概念，认为一个国家不能只注重GDP，更重要的应该将国民集体幸福视为治理目标，强调与自然的谐和。国民幸福总值的9个幸福领域和四大支柱所表达的传统价值观，包括对文化的保留和推广、心理福祉等因素，被学者们认为是具有鲜明的佛家色彩。</p>
 <p>50年来，国民幸福总值被越来越多的西方国家所认可。2011年，联合国大会通过决议，敦促成员国效仿不丹注重国民幸福。小小的不丹国也因此名扬全球。</p>
-<p>好了，今天的故事就讲到这里了。希望大家都平安相随，幸福相伴。<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%9C%AA%E8%A7%A3%E4%B9%8B%E8%B0%9C.md#1">未解之谜</a>，我是扶摇，我们下次见。</p>
+<p>好了，今天的故事就讲到这里了。希望大家都平安相随，幸福相伴。未解之谜，我是扶摇，我们下次见。</p>
 <p>参考资料：<br />
 1.《约翰?卡尔霍恩的实验》<br />
 <ahref="https://www.physicsoflife.pl/dict/calhoun%27s_experiment.md#1#calhoun's_experiment_introduction">https://www.physicsoflife.pl/dict/calhoun%27s_experiment.md#1#calhoun&#8217;s_experiment_introduction</a><br />
 2.《魔鬼在统治着我们的世界（7）：渗透西方（上）》<br />
-<ahref="https://github.com/19920513/djy/blob/master/gb/18/5/25/n10426013.md#1">https://github.com/19920513/djy/blob/master/gb/18/5/25/n10426013.md#1</a></p>
+<ahref="https://github.com/1992513/djy/blob/master/gb/18/5/25/n10426013.md#1">https://github.com/1992513/djy/blob/master/gb/18/5/25/n10426013.md#1</a></p>
 <p>—&#8212;&#8212;&#8212;&#8212;&#8212;&#8212;&#8212;-</p>
 <p>欢迎订阅Youmaker频道：<ahref="https://www.youmaker.com/c/UnsolvedMystery">https://www.youmaker.com/c/UnsolvedMystery</a><br />
 订阅频道YouTube频道：<ahref="https://www.youtube.com/channel/UCzvQZ1p_-AXgAWiyHhE7CxQ">https://www.youtube.com/channel/UCzvQZ1p_-AXgAWiyHhE7CxQ</a><br />
-订阅<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%e6%9c%aa%e8%a7%a3%e4%b9%8b%e8%ac%8e.md#1">未解之谜</a>Telegram群组：<ahref="https://t.me/wjzmchannel">https://t.me/wjzmchannel</a></p>
+订阅<ahref="https://github.com/1992513/djy/blob/master/gb/tag/%e6%9c%aa%e8%a7%a3%e4%b9%8b%e8%ac%8e.md#1">未解之谜</a>Telegram群组：<ahref="https://t.me/wjzmchannel">https://t.me/wjzmchannel</a></p>
 <p>【<ahref="https://www.youtube.com/channel/UCzvQZ1p_-AXgAWiyHhE7CxQ" target="_blank" rel="noopener noreferrer">未解之谜</a>】节目组制作</p>
 <p>责任编辑：李梅#</p>
 <div class="jfk-bubble gtx-bubble" style="visibility: visible; left: 156px; top: 301px; opacity: 1;"></div>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/8/18/n13805592.md#1">【未解之谜】“与世隔绝”是一种怎样的体验</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/8/22/n13807345.md#1">【未解之谜】不存在的网红餐厅</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/8/25/n13810313.md#1">【未解之谜】太平洋文明之谜 姆大陆</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/8/28/n13812361.md#1">【未解之谜】亚特兰蒂斯找到了？！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/2/n13815759.md#1">【未解之谜】埃及女祭司3000年灵魂之旅</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/5/n13817371.md#1">【未解之谜】不会腐烂的苹果</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/4/n13942716.md#1">【未解之谜】从破案到预言 为什么梦如此神奇？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/1/n13940368.md#1">【未解之谜】ChatGPT技术 犹太传说中早就有了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/11/n13927307.md#1">【未解之谜】改命用错招 预言大师难逃宿命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/8/18/n13805592.md#1">【未解之谜】“与世隔绝”是一种怎样的体验</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/8/22/n13807345.md#1">【未解之谜】不存在的网红餐厅</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/8/25/n13810313.md#1">【未解之谜】太平洋文明之谜 姆大陆</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/8/28/n13812361.md#1">【未解之谜】亚特兰蒂斯找到了？！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/9/2/n13815759.md#1">【未解之谜】埃及女祭司3000年灵魂之旅</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/9/5/n13817371.md#1">【未解之谜】不会腐烂的苹果</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14271930.md#1">大预言家的“末世预言”（下）：古今妙合共振！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14271929.md#1">大预言家的“末世预言”（上）：指向什么出路？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/3/n14262775.md#1">【未解之谜】他看到天机：“七星连芒”东方大城历劫</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/6/n14241605.md#1">【未解之谜】时空旅人惊人预言：9.8级地震正在路上？</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶/a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/26/n10173051.md#1" target="_blank">艾以：音乐家陈歌辛的最后岁月</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/11/10/n4570585.md#1" target="_blank">四川老人两次重伤不治痊愈</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/11/n9947822.md#1" target="_blank">文革中自杀的几个名人（2）文联主席老舍</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/13/5/1/n3859798.md#1" target="_blank">乡音：这样的菜农越多越好</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957926.md#1">【未解之谜】科学证明 轮回真的存在？！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13956715.md#1">鬼使迎接 谁人来当阎罗王？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/20/n13954436.md#1">天公微意妙难量 许大年诚心改过福绵绵</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/17/n13952483.md#1">【古道人生】捕风捉影无事生非而造成三人死亡</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13961578.md#1">【晚间新闻】多国惊现大角星变异株 传播飞快</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13961402.md#1">【秦鹏观察】泽连斯基发访问邀请 习如何回应</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/29/n13961300.md#1">【中国禁闻】专家：习误判东升西降 导致战略透支</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960204.md#1">习近平变相当党主席？专家析中共双重危机</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960107.md#1">网传国务院高层分工文件 丁薛祥权责引关注</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960476.md#1">毛宁吁公平 美国会回呛：啥时让推特去中国</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960536.md#1">刘涛持股公司注销 直播账号停更 网友热议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/27/n13959871.md#1">骑单车去看老狼演唱会 高圆圆与闺密开心摆拍</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/29/n13961317.md#1">遭大陆主持人强拉外套 王心凌吓得脸色大变</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/29/n13961287.md#1">43岁沈腾疑出国求医 近照脖子粗大引猜测</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960514.md#1">夺全球专辑销量冠军 周杰伦回应昆凌骄傲又逗趣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/27/n13959381.md#1">有一种运动可能对健康有害</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/20/n13954466.md#1">这种糖吃多让人变痴呆 专家析原因</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960218.md#1">衣服应该多久洗一次？ 看看专家怎么说</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/29/n13961000.md#1">无法边走路边讲话？哈佛研究：或为痴呆症前兆</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960065.md#1">经济陷衰退 还敢买佛州房产吗？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14279772.md#1">【古道人生】女子婚姻不好 可能是什么原因？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280210.md#1">苏轼小时和黠鼠交手 他为何输了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281646.md#1">【佳人传】 作诗千首 持斋修道的汪端</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14280988.md#1">这仆人怎得变身为太守？一介贫儿又怎成了皇帝亲信呢？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285355.md#1">奇怪的数学家（In our Prime）观影有感</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285302.md#1">【晚间新闻】关岛逮两名中国偷渡客 判刑后遣返</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286164.md#1">【未解之谜】最可信的穿越者 他在历史中留下了证据</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285299.md#1">【中国禁闻】洞庭湖决堤伤亡难计 大批灾民未获救助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284584.md#1">持有多少现金储蓄最合适？专家解析</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285314.md#1">沈舟：美军增派F-35到日本 中共难应对</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285328.md#1">搭机长途旅行太累 如何挑选最舒服经济舱座位</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285195.md#1">26届台北电影奖完整名单 影帝阮经天影后林品彤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285307.md#1">上海开唱在高台上滑跪 刘德华因危险动作道歉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286463.md#1">孙俪自曝被夸“天选打工人” 帖文引两极论战</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286087.md#1">《加菲猫：农场大冒险》优于旧作 7月线上发行</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285313.md#1">汪明荃两度患癌 炎夏在冷气房穿冬装采排粤剧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284934.md#1">越吃越瘦？专家：“负热量食物”有助减重</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286069.md#1">为何飞机从起点到终点的飞行路线非一直线？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285552.md#1">在游泳池最容易得这三种病 千万要小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285219.md#1">只用微波炉 就能煮好玉米棒</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/14/n14250364.md#1">你吃对东西了吗？专家揭七大防癌饮食</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/9/8/n13820368.htm">【未解之谜】老鼠乌托邦</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/22/9/8/n13820368.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/22/9/8/n13820368.htm">【未解之谜】老鼠乌托邦</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/22/9/8/n13820368.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
